@@ -30,7 +30,7 @@ import org.apache.arrow.vector.types.pojo.{ArrowType, Field, FieldType, Schema}
 import org.apache.spark.{SparkException, SparkUnsupportedOperationException}
 import org.apache.spark.sql.types._
 import org.lance.spark.LanceConstant
-import org.lance.spark.utils.{BlobUtils, DateMilliUtils, Float16Utils, LargeVarCharUtils, VectorUtils}
+import org.lance.spark.utils.{BlobUtils, DateMilliUtils, FixedSizeBinaryUtils, Float16Utils, LargeVarCharUtils, VectorUtils}
 
 import java.util.Locale
 import java.util.concurrent.atomic.AtomicInteger
@@ -44,8 +44,12 @@ object LanceArrowUtils {
   val ARROW_FIXED_SIZE_LIST_SIZE_KEY = VectorUtils.ARROW_FIXED_SIZE_LIST_SIZE_KEY
   val ARROW_FLOAT16_KEY = Float16Utils.ARROW_FLOAT16_KEY
   val ENCODING_BLOB = BlobUtils.LANCE_ENCODING_BLOB_KEY
+  val ARROW_EXT_NAME_KEY = BlobUtils.ARROW_EXTENSION_NAME_KEY
+  val BLOB_V2_EXT_NAME = BlobUtils.ARROW_EXTENSION_BLOB_V2
   val ARROW_LARGE_VAR_CHAR_KEY = LargeVarCharUtils.ARROW_LARGE_VAR_CHAR_KEY
   val ARROW_DATE_MILLISECOND_KEY = DateMilliUtils.ARROW_DATE_MILLISECOND_KEY
+  val ARROW_FIXED_SIZE_BINARY_BYTE_WIDTH_KEY =
+    FixedSizeBinaryUtils.ARROW_FIXED_SIZE_BINARY_BYTE_WIDTH_KEY
 
   // Namespaced keys used to embed child Spark Metadata on a parent StructField when the
   // child sits inside an ArrayType/MapType — Spark has no per-element metadata slot of its
@@ -55,12 +59,36 @@ object LanceArrowUtils {
   val LANCE_MAP_KEY_METADATA_KEY = "_lance.key"
   val LANCE_MAP_VALUE_METADATA_KEY = "_lance.value"
 
+  // Lance-Spark convention: UDT class FQN on the Arrow field's user metadata. Write stamps it
+  // from udt.getClass.getName when udt.sqlType is a StructType; read consumes it to rewrap the
+  // field's dataType. UDTs with non-struct sqlType are written via their underlying type without
+  // the marker (the UDT wrapper degrades to sqlType on read-back). Spark's own sources don't
+  // use this key — Parquet round-trips UDT info via a file-level serialized schema
+  // (ParquetReadSupport.SPARK_METADATA_KEY) instead.
+  val LANCE_UDT_CLASS_KEY = "__udt"
+
   private val LANCE_INTERNAL_METADATA_KEYS = Set(
     LANCE_ELEMENT_METADATA_KEY,
     LANCE_MAP_KEY_METADATA_KEY,
     LANCE_MAP_VALUE_METADATA_KEY)
 
   def fromArrowField(field: Field): DataType = {
+    val baseType = convertArrowFieldType(field)
+    val udtFqn = field.getMetadata.get(LANCE_UDT_CLASS_KEY)
+    if (udtFqn == null) {
+      baseType
+    } else {
+      val udt = loadUdt(udtFqn, field.getName)
+      if (!udt.sqlType.sameType(baseType)) {
+        throw new IllegalStateException(
+          s"UDT '$udtFqn' for field '${field.getName}' has sqlType ${udt.sqlType} " +
+            s"which does not match the persisted type $baseType")
+      }
+      udt
+    }
+  }
+
+  private def convertArrowFieldType(field: Field): DataType = {
     field.getType match {
       // Handle unsigned integers by mapping to larger signed types
       // UInt8 -> ShortType (signed 16-bit can hold all UInt8 values 0-255)
@@ -82,6 +110,8 @@ object LanceArrowUtils {
         val elementType = fromArrowField(elementField)
         val containsNull = elementField.isNullable
         ArrayType(elementType, containsNull)
+      case _: ArrowType.Struct if isBlobField(field) =>
+        BinaryType
       case _: ArrowType.Struct =>
         // Always recurse through LanceArrowUtils for struct children so special cases
         // like Date(MILLISECOND), FixedSizeBinary, etc. are applied in nested schemas too.
@@ -156,6 +186,13 @@ object LanceArrowUtils {
           if fp.getPrecision == FloatingPointPrecision.HALF =>
         // Widen float16 to float32 for Spark (Spark has no native float16 type)
         FloatType
+      case _: ArrowType.Time =>
+        // Spark's own ArrowUtils accepts only Time(NANOSECOND, 64); other units throw.
+        // We accept all four Arrow Time variants (Sec/Milli/Micro/Nano) and rescale to nanos
+        // in TimeUnitAccessor so Lance datasets written by non-Spark producers (Arrow,
+        // DataFusion, Polars) round-trip cleanly.
+        // TimeType is Spark 4.1+ only; fall back to LongType (raw nanos) on older versions.
+        TimeUtils.resolveSparkTimeType()
       case d: ArrowType.Decimal if d.getBitWidth == 256 =>
         // Spark only supports 128-bit decimal (precision <= 38).
         // Throw at schema time rather than a cryptic UnsupportedOperationException
@@ -186,8 +223,11 @@ object LanceArrowUtils {
    * `_lance.element`, `_lance.key`, and `_lance.value` so writeback can reconstruct it.
    */
   private[util] def buildFieldMetadata(field: Field): Metadata = {
-    // Start from the Arrow field's user metadata so non-Lance keys (if any) survive.
-    val arrowMeta = Metadata.fromJson(mapper.writeValueAsString(field.getMetadata))
+    // Strip __udt — fromArrowField has already consumed it to rewrap the dataType, so surfacing
+    // it here would be noise. Re-write is safe: toArrowField's UDT branch re-derives the marker
+    // from udt.getClass.getName.
+    val filteredArrowMeta = field.getMetadata.asScala.toMap - LANCE_UDT_CLASS_KEY
+    val arrowMeta = Metadata.fromJson(mapper.writeValueAsString(filteredArrowMeta.asJava))
     val builder = new MetadataBuilder().withMetadata(arrowMeta)
     augmentTypeMarkers(builder, field)
     augmentChildMetadata(builder, field)
@@ -205,6 +245,10 @@ object LanceArrowUtils {
         builder.putString(ARROW_LARGE_VAR_CHAR_KEY, LargeVarCharUtils.ARROW_LARGE_VAR_CHAR_VALUE)
       case date: ArrowType.Date if date.getUnit == DateUnit.MILLISECOND =>
         builder.putString(ARROW_DATE_MILLISECOND_KEY, DateMilliUtils.ARROW_DATE_MILLISECOND_VALUE)
+      case fsb: ArrowType.FixedSizeBinary =>
+        // Preserve FixedSizeBinary byte width so a subsequent write reproduces
+        // FixedSizeBinary(n) instead of falling back to variable-length Binary.
+        builder.putLong(ARROW_FIXED_SIZE_BINARY_BYTE_WIDTH_KEY, fsb.getByteWidth.toLong)
       case _ =>
     }
   }
@@ -391,11 +435,35 @@ object LanceArrowUtils {
             timeZoneId,
             largeVarTypes = largeVarTypes)).asJava)
       case udt: UserDefinedType[_] =>
-        toArrowField(name, udt.sqlType, nullable, timeZoneId, largeVarTypes = largeVarTypes)
+        // Unwrap to sqlType for storage (Arrow has no UDT concept). When sqlType is a
+        // StructType, stamp the UDT FQN as a field-level metadata marker so the read side
+        // can rewrap automatically. For non-struct sqlTypes the marker is skipped — the data
+        // still round-trips via the underlying type, but the UDT wrapper degrades. All real
+        // MLlib UDTs (VectorUDT, MatrixUDT) use struct sqlType, so this restriction matches
+        // every supported case while keeping `__udt` off arrow fields where it has no use.
+        udt.sqlType match {
+          case _: StructType =>
+            val baseBuilder = new MetadataBuilder()
+            if (metadata != null) {
+              baseBuilder.withMetadata(metadata)
+            }
+            val udtMeta = baseBuilder.putString(LANCE_UDT_CLASS_KEY, udt.getClass.getName).build()
+            toArrowField(name, udt.sqlType, nullable, timeZoneId, udtMeta, largeVarTypes)
+          case _ =>
+            toArrowField(name, udt.sqlType, nullable, timeZoneId, metadata, largeVarTypes)
+        }
       case DateType if DateMilliUtils.hasDateMilliMetadata(metadata) =>
         val fieldType = new FieldType(
           nullable,
           new ArrowType.Date(DateUnit.MILLISECOND),
+          null,
+          meta.asJava)
+        new Field(name, fieldType, Seq.empty[Field].asJava)
+      case BinaryType if FixedSizeBinaryUtils.hasFixedSizeBinaryMetadata(metadata) =>
+        val byteWidth = metadata.getLong(ARROW_FIXED_SIZE_BINARY_BYTE_WIDTH_KEY).toInt
+        val fieldType = new FieldType(
+          nullable,
+          new ArrowType.FixedSizeBinary(byteWidth),
           null,
           meta.asJava)
         new Field(name, fieldType, Seq.empty[Field].asJava)
@@ -439,6 +507,9 @@ object LanceArrowUtils {
     case _: YearMonthIntervalType => new ArrowType.Interval(IntervalUnit.YEAR_MONTH)
     case _: DayTimeIntervalType => new ArrowType.Duration(TimeUnit.MICROSECOND)
     case CalendarIntervalType => new ArrowType.Interval(IntervalUnit.MONTH_DAY_NANO)
+    // TimeType is Spark 4.1+ only. Use class name check for cross-version compatibility.
+    case dt if dt.getClass.getName == "org.apache.spark.sql.types.TimeType" =>
+      new ArrowType.Time(TimeUnit.NANOSECOND, 64)
     // In Spark 3.4/3.5, CharType and VarcharType extend AtomicType (not StringType),
     // so `case _: StringType` above does not match them. On Spark 4.0+ they extend
     // StringType and are already caught above, making these branches harmlessly unreachable.
@@ -453,7 +524,10 @@ object LanceArrowUtils {
   private def deduplicateFieldNames(
       dt: DataType,
       errorOnDuplicatedFieldNames: Boolean): DataType = dt match {
-    case udt: UserDefinedType[_] => deduplicateFieldNames(udt.sqlType, errorOnDuplicatedFieldNames)
+    // UDTs have a fixed sqlType defined by the UDT class; recursing here would either be a no-op
+    // or break the UDT contract. Preserving the UDT lets toArrowField's UDT branch stamp __udt
+    // and unwrap at every nesting depth (top-level, inside StructType, ArrayType element, etc.).
+    case udt: UserDefinedType[_] => udt
     case st @ StructType(fields) =>
       val newNames = if (st.names.toSet.size == st.names.length) {
         st.names
@@ -495,6 +569,63 @@ object LanceArrowUtils {
     VectorUtils.shouldBeFixedSizeList(ArrayType(elementType, true), metadata)
   }
 
+  /**
+   * Reflective UDT instantiation for the read-side rewrap. Two non-obvious choices:
+   *   - Thread context classloader (with this class's loader as fallback) so user-provided UDTs
+   *     shipped via --jars / spark.jars resolve.
+   *   - setAccessible(true) is required for `private[spark]` UDTs like VectorUDT (constructor is
+   *     JVM package-private). On JDK 9+ this can throw InaccessibleObjectException unless the
+   *     spark module is opened — Spark's own --add-opens flags cover that.
+   */
+  private def loadUdt(fqn: String, fieldName: String): UserDefinedType[_] = {
+    val loader = Option(Thread.currentThread().getContextClassLoader)
+      .getOrElse(getClass.getClassLoader)
+    // initialize=false: defer the class's static initializer until we've verified the class is
+    // actually a UserDefinedType. The FQN is read from Lance manifest data; without this guard a
+    // crafted manifest could trigger arbitrary static-init side effects on any class that happens
+    // to be on the reader's classpath. newInstance() below triggers initialization at use time.
+    val cls =
+      try {
+        Class.forName(fqn, false, loader)
+      } catch {
+        case e: ClassNotFoundException =>
+          throw new IllegalStateException(
+            s"UDT class '$fqn' for field '$fieldName' could not be loaded",
+            e)
+      }
+    if (!classOf[UserDefinedType[_]].isAssignableFrom(cls)) {
+      throw new IllegalStateException(
+        s"Class '$fqn' named in '__udt' metadata of field '$fieldName' is not a UserDefinedType")
+    }
+    val ctor =
+      try {
+        cls.getDeclaredConstructor()
+      } catch {
+        case e: NoSuchMethodException =>
+          throw new IllegalStateException(
+            s"UDT class '$fqn' for field '$fieldName' has no no-arg constructor",
+            e)
+      }
+    try {
+      ctor.setAccessible(true)
+    } catch {
+      case e: RuntimeException =>
+        throw new IllegalStateException(
+          s"UDT class '$fqn' for field '$fieldName' could not be made accessible " +
+            "(reflective access denied; check JDK module opens / Java security manager " +
+            "configuration)",
+          e)
+    }
+    try {
+      ctor.newInstance().asInstanceOf[UserDefinedType[_]]
+    } catch {
+      case e: ReflectiveOperationException =>
+        throw new IllegalStateException(
+          s"UDT class '$fqn' for field '$fieldName' could not be instantiated",
+          e)
+    }
+  }
+
   /* Copy from copy of org.apache.spark.sql.errors.ExecutionErrors for Spark version compatibility */
   private def unsupportedDataTypeError(typeName: DataType): SparkUnsupportedOperationException = {
     new SparkUnsupportedOperationException(
@@ -519,7 +650,49 @@ object LanceArrowUtils {
 
   private def isBlobField(field: Field): Boolean = {
     val metadata = field.getMetadata
-    metadata != null && metadata.containsKey(ENCODING_BLOB) &&
-    "true".equalsIgnoreCase(metadata.get(ENCODING_BLOB))
+    if (metadata == null) return false
+    (metadata.containsKey(ENCODING_BLOB) &&
+      "true".equalsIgnoreCase(metadata.get(ENCODING_BLOB))) ||
+    BLOB_V2_EXT_NAME.equals(metadata.get(ARROW_EXT_NAME_KEY))
+  }
+}
+
+/**
+ * Resolves Spark TimeType via reflection for cross-version compatibility.
+ * TimeType is only available in Spark 4.1+.
+ */
+private[util] object TimeUtils {
+  @volatile private var timeTypeResult: Option[DataType] = null
+
+  /**
+   * Returns Spark TimeType (default precision) if available (Spark 4.1+), otherwise LongType.
+   */
+  def resolveSparkTimeType(): DataType = {
+    if (timeTypeResult == null) {
+      synchronized {
+        if (timeTypeResult == null) {
+          timeTypeResult =
+            try {
+              // TimeType$ is the Scala companion object; its apply() returns TimeType
+              // with default precision (MICROS_PRECISION = 6).
+              val companionClass = Class.forName("org.apache.spark.sql.types.TimeType$")
+              val module = companionClass.getField("MODULE$").get(null)
+              val applyMethod = companionClass.getMethod("apply")
+              Some(applyMethod.invoke(module).asInstanceOf[DataType])
+            } catch {
+              case _: ClassNotFoundException | _: NoSuchFieldException |
+                  _: NoSuchMethodException => None
+            }
+        }
+      }
+    }
+    timeTypeResult.getOrElse(LongType)
+  }
+
+  /**
+   * Returns true if Spark TimeType is available (Spark 4.1+).
+   */
+  def isTimeTypeAvailable: Boolean = {
+    resolveSparkTimeType() ne LongType
   }
 }
